# RenderingEngine

./: '  CMakeLists.txt  README.md  build.sh  build_debug.sh  debug.sh  run.sh
include/: camera.hpp  color.hpp  event.hpp  keyboard.hpp  model.hpp  renderer.hpp  rg.hpp  shader.hpp  temp_cube.hpp  window.hpp
include/graphics/: camera.hpp  model.hpp  renderer.hpp  shader.hpp
include/graphics/model_formats/: wavefront_obj.hpp
include/platform/opengl/: gl_model.hpp  gl_renderer3d.hpp  gl_shader.hpp  glmodel.hpp  glrenderer3d.hpp  glshader.hpp  opengl.hpp
include/platform/x11/: x11_keyboard.hpp  x11_window.hpp
include/system/: clock.hpp  event.hpp  keyboard.hpp  keycode.hpp  window.hpp
models/Church/: church.blend
shaders/: fragment.glsl  fragment_3d.glsl  vertex_3d.glsl
src/: main.cpp  model.cpp  renderer.cpp  shader.cpp  window.cpp
src/graphics/: model.cpp  renderer.cpp  shader.cpp
src/graphics/model_formats/: wavefront_obj.cpp
src/platform/: opengl.cpp  window.cpp
src/platform/opengl/: gl_model.cpp  gl_renderer3d.cpp  gl_shader.cpp  glmodel.cpp  glrenderer3d.cpp  glshader.cpp  opengl.cpp
src/platform/x11/: x11_window.cpp
src/system/: clock.cpp
